# fishing-board-game-prototype

./: .gitignore  README.md  cards.typ  main.py
card-printout/: card-data.yml
cli-proto/: main.py
data/: add_tax_info.py  data.yaml  fetch_fish_properties.py  fetch_fish_tax_info.py  generate_card_data.py  pyproject.toml  visualize.ipynb
ws-proto/: ngrok.yaml
ws-proto/client/: index.html  package.json  pnpm-lock.yaml  vite.config.js
ws-proto/client/src/: App.jsx
ws-proto/client/src/components/: DebugConsole.jsx  DebugConsole.tsx  FishCard.jsx  GearCard.jsx  PlayerCard.jsx  QuestCard.jsx
ws-proto/server/: data.yaml  package.json  pnpm-lock.yaml  server.js
